--- a/styles/templates/presentations/default.css
+++ b/styles/templates/presentations/default.css
@@ -31,9 +31,11 @@
     position: relative;
     width: var(--presentation-slide-width) !important;
     min-height: var(--presentation-slide-height) !important;
+    height: auto !important;
     max-width: var(--presentation-slide-width) !important;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .slide-content {
@@ -61,9 +63,11 @@ div.absolute.slide {
     position: relative;
     width: var(--presentation-slide-width) !important;
     min-height: var(--presentation-slide-height) !important;
+    height: auto !important;
     max-width: var(--presentation-slide-width) !important;
     box-sizing: border-box;
-    overflow: hidden !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
 }
 
 
@@ -157,6 +161,7 @@ div.absolute.slide {
 .slide-content ul ul, .slide-content ol ol, .slide-content ul ol, .slide-content ol ul {
     font-size: 0.9em;
     margin: 0.5em 0;
+    margin-top: 2px;
 }
 
 /* Third level nested lists should be even smaller */
